Copy changes for Civil
Copy changes to align with other journeys.

--- a/app/views/civil/bank-success.html
+++ b/app/views/civil/bank-success.html
@@ -18,17 +18,21 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 17</b></p>
+    <p class="govuk-body"><b>Step 6 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          We connected to your bank or building society
+          You have succesfully shared your account information
         </h2>
 
-        <h2 class="govuk-heading-m">
-          Account information
+        <p class="govuk-body">You are now logged out from your online banking.</p>
+ 
+        <p class="govuk-body">We have downloaded your transaction history for the last 3 months. You can use this to tell us more about your incoming and outgoing payments.</p>
+       
+       <h2 class="govuk-heading-m">
+          Your account(s)
         </h2>
 
         <div>
@@ -64,8 +68,6 @@
             </tbody>
           </table>
           <br>
-          <p class="govuk-body">Connect to HMRC and DWP to provide evidence about tax and benefits.</p>
-
           <a class="govuk-c-button govuk-c-button" href="/civil/identify-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="govuk-c-back-link" href="/civil/obbank">Back</a>
 
@@ -75,5 +77,4 @@
 
   </main>
   </div>
-
   {% endblock %}
