--- a/app/views/civil/check-evidence.html
+++ b/app/views/civil/check-evidence.html
@@ -14,16 +14,16 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 10 of 17</b></p>
+    <p class="govuk-body"><b>Step 8 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Check your answers before you submit your evidence
+          Check your answers
         </h1>
 
-        <p class="govuk-body">Make sure you check your answers carefully. If you submit incorrect information your application might be delayed.</p>
+        <p class="govuk-body">Please check and confirm the transactions you want to support your application.</p>
 
         <form class="form" action="/civil/benefits-kind" method="post">
 
@@ -90,7 +90,8 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Do you have other income and outgoings that are not paid into your bank, but you have evidence for?</h4>
+                <h4 class="govuk-heading">Do you have other income and outgoings that are not paid into your bank?</h4>
+                <span class="govuk-c-label__hint">You will need to provide evidence to support these transactions.</span>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes" required>
@@ -107,9 +108,12 @@
             </fieldset>
           </div>
 
+
+          <h2>Declaration and statement of truth</h2>
+          <br>
           <div class="govuk-c-checkboxes__item">
             <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
-            <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I have provided all the evidence and not left anything out</label>
+            <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I believe I have provided all the evidence of my income and outgoings to the best of my knowledge. If I am found to have been deliberately untruthful or dishonest, criminal proceedings for fraud can be brought against me.</label>
           </div>
 
           </br>
