--- a/app/views/civil/dwpconf.html
+++ b/app/views/civil/dwpconf.html
@@ -14,14 +14,16 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 5 of 17</b></p>
+    <p class="govuk-body"><b>Step 4 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Is this information correct?
+          Are your details correct?
         </h1>
+
+        <p class="govuk-body">Check the information you have given is correct or make changes.</p>
 
         <h2 class="govuk-heading-m">
           Personal details
@@ -44,7 +46,7 @@
 
           <div>
             <dt class="cya-question">
-              National insurance number
+              National Insurance number
             </dt>
             <dd class="cya-answer">
               HJ000000D
@@ -71,7 +73,7 @@
           </div>
         </dl>
         </br>
-        <a href="/civil/empstatus" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="/civil/obbank" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="govuk-c-back-link" href="/civil/dwpdetails">Back</a>
 
       </div>
