--- a/app/views/civil/dwpdetails.html
+++ b/app/views/civil/dwpdetails.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 4 of 17</b></p>
+    <p class="govuk-body"><b>Step 3 of 15</b></p>
 
     <div class="govuk-o-grid">
 
@@ -24,12 +24,12 @@
           Enter your National Insurance number and date of birth
         </h1>
 
-        <p class="govuk-body">We need this information to identify you to other government departments.</p>
+        <p class="govuk-body">We use this to check your tax and benefits status.</p>
 
         <form class="form" action="/civil//dwpconf" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
-            National Insurance Number
+            Enter your National Insurance Number
             <span class="govuk-c-label__hint govuk-!-width-two-thirds">
               It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
             </span>
@@ -39,7 +39,7 @@
           <fieldset class="govuk-c-fieldset">
             <legend class="govuk-c-fieldset__legend">
               <label class="govuk-c-label" for="full-name">
-                Date of Birth
+                Enter your date of birth
               </label>
             </legend>
             <div class="govuk-c-date-input" id="dob">
