--- a/app/views/civil/valuables.html
+++ b/app/views/civil/valuables.html
@@ -14,25 +14,16 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 17</b></p>
+    <p class="govuk-body"><b>Step 13 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Valuable items
+          Do you own any items worth £500 or more?
         </h1>
 
-        <p class="govuk-body">Do you own anything valuable (worth £500 or more) like:</p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>jewellery</li>
-          <li>antiques</li>
-          <li>paintings</li>
-          <li>collectable items</li>
-          <li>horses</li>
-          <li>boats</li>
-        </ul>
+        <p class="govuk-body">Valuables include things like jewellery, antiques, paintings or collectable items.</p>
 
         <form class="form" action="/civil/means-result" method="post">
 
