--- a/app/views/civil/start.html
+++ b/app/views/civil/start.html
@@ -18,34 +18,42 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 1 of 17</b></p>
+    <p class="govuk-body"><b>Step 1 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Client Details
+          What is your current situation?
         </h1>
 
-        <form class="form" action="/civil/obexpress" method="post">
+        <p class="govuk-body">This helps us to check your financial details for the last 3 months.</p>
+
+        <form class="form" action="/civil/obconsent" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Is the client a prisoner?</h4>
-                <span class="govuk-c-fieldset__hint">Please answer yes if the client is on remand or serving a current
-                sentence. Please answer no if the client is being held under immigration powers (including post conviction)
-                in a prison, or in relation to asylum matters</span>
+                <h4 class="govuk-heading">Are you currently in prison?</h4>
+
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="prisoner-1" name="prisoner" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="prisoner-1">
-              Yes
+              Yes, I'm on remand or serving a current sentence
             </label>
               </div>
-              <div class="govuk-c-radios__item">
+              
+             <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="prisoner-2" name="prisoner" type="radio" value="no">
                 <label class="govuk-c-label govuk-c-radios__label" for="prisoner-2">
+              Yes, I'm being held for immigration or asylum matters
+            </label>
+              </div>
+
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="prisoner-3" name="prisoner" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="prisoner-3">
               No
             </label>
               </div>
@@ -55,7 +63,7 @@
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Has the client recently separated or divorced?</h4>
+                <h4 class="govuk-heading">Have you recently separated or divorced?</h4>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="divorced-1" name="divorced" type="radio" value="yes" required>
@@ -72,42 +80,70 @@
             </fieldset>
           </div>
 
-
-          <h3 class="govuk-heading-xl">
-          Partner Information
-        </h3>
-
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Having consideration for our definition of partner and the guidance provided, does
-                the client have a partner?</h4>
-                <span class="govuk-c-fieldset__hint">Please answer yes at this stage even if they hold a contrary interest to the
-                proceedings applied for.</span>
+                <h4 class="govuk-heading">Are you single, married or living with someone and sharing an income?</h4>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="partner-1" name="partner" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="partner-1">
-              Yes
+              Single
             </label>
               </div>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="partner-2" name="partner" type="radio" value="no">
                 <label class="govuk-c-label govuk-c-radios__label" for="partner-2">
+              Married or living with someone and sharing an income
+            </label>
+              </div>
+            </fieldset>
+          </div>
+
+          <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h4 class="govuk-heading">Are you employed?</h4>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="employed-1" name="employed" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-1">
+              Yes
+            </label>
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="employed-2" name="employed" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="employed-2">
               No
             </label>
               </div>
             </fieldset>
           </div>
 
-          <h3 class="govuk-heading-xl">
-          Passporting Benefits
-          </h3>
+          <div class="govuk-c-radios">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h4 class="govuk-heading">Have you been paid redundancy in the last month?</h4>
+              </legend>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="redundancy-1" name="redundancy" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="redundancy-1">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-c-radios__item">
+                <input class="govuk-c-radios__input" id="redundancy-2" name="redundancy" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="redundancy-2">
+                  No
+                </label>
+              </div>
+            </fieldset>
+          </div>
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Is the client receiving a passported benefit?</h4>
+                <h4 class="govuk-heading">Are you currently receiving benefits?</h4>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="passported-1" name="passported" type="radio" value="yes" required>
