Remove valuables and employment screens from all flows

--- a/app/views/civil/obbank.html
+++ b/app/views/civil/obbank.html
@@ -173,7 +173,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 5 of 15</b></p>
+      <p class="govuk-body"><b>Step 5 of 14</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -182,14 +182,14 @@
                 Log in to your online banking
           </h1>
 
-          <form class="form" id="bankForm" action="/generic/bank-success" method="get">
+          <form class="form" id="bankForm" action="/civil/bank-success" method="get">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
                 <legend class="govuk-c-fieldset__legend">
 
                   <p class="govuk-heading">You must share details of all your bank accounts, even if they have no money. Make sure you keep your log in and password details private.</p>
-                  
+
                   <p class="govuk-heading">Choose the bank where you have your main current account. Make sure you keep your log in and password details private.</p>
 
                 </legend>
@@ -449,6 +449,7 @@
       $("#step2").addClass('hideMe');
       $("#step3").addClass('hideMe');
       $("#step4").addClass('hideMe');
+      $("#step5").addClass('hideMe');
     });
   </script>
 
