--- a/app/views/crime/bank-success.html
+++ b/app/views/crime/bank-success.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 15</b></p>
+    <p class="govuk-body"><b>Step 6 of 14</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -28,6 +28,8 @@
         </h2>
 
         <p class="govuk-body">You have been logged out of your online banking.</p>
+
+        <p class="govuk-body">We have downloaded your transaction history for the last 3 months. You can use this to tell us more about your incoming and outgoing payments.</p>
 
         <h2 class="govuk-heading-m">
           Your account(s)
