--- a/app/views/crime/capitalshares.html
+++ b/app/views/crime/capitalshares.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 12 of 15</b></p>
+    <p class="govuk-body"><b>Step 12 of 14</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -25,7 +25,7 @@
 
         <p class="govuk-body">You will need to upload copies of your stocks or share certificates later in your application.</p>
 
-        <form class="form" action="/crime/valuables" method="post">
+        <form class="form" action="/crime/means-result" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-insurance-number">
             Enter the value of your stocks or shares
