--- a/app/views/crime/means-result.html
+++ b/app/views/crime/means-result.html
@@ -16,7 +16,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 14 of 15</b></p>
+    <p class="govuk-body"><b>Step 13 of 14</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -266,7 +266,7 @@
           </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/valuables">Back</a>
+          <a class="govuk-c-back-link" href="/crime/capitalshares">Back</a>
         </form>
       </div>
     </div>
