--- a/app/views/crime/obbank.html
+++ b/app/views/crime/obbank.html
@@ -173,7 +173,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 5 of 15</b></p>
+      <p class="govuk-body"><b>Step 5 of 14</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -182,7 +182,7 @@
                 Log in to your online banking
                 </h1>
 
-          <form class="form" id="bankForm" action="/generic/bank-success" method="get">
+          <form class="form" id="bankForm" action="/crime/bank-success" method="get">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
@@ -231,7 +231,7 @@
             </div>
 
             <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/generic/obconsent">Back</a>
+            <a class="govuk-c-back-link" href="/crime/obconsent">Back</a>
 
           </form>
         </div>
@@ -441,6 +441,7 @@
       $("#step2").addClass('hideMe');
       $("#step3").addClass('hideMe');
       $("#step4").addClass('hideMe');
+      $("#step5").addClass('hideMe');
     });
   </script>
 
