--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 15</b></p>
+    <p class="govuk-body"><b>Step 4 of 13</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -73,8 +73,8 @@
           </div>
         </dl>
         </br>
-        <a href="/generic/empstatus" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/dwpdetails">Back</a>
+        <a href="/generic/obbank" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/obconsent">Back</a>
 
       </div>
     </div>
