--- a/app/views/generic/identify-evidence.html
+++ b/app/views/generic/identify-evidence.html
@@ -82,7 +82,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 15</b></p>
+    <p class="govuk-body"><b>Step 7 of 13</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -90,7 +90,7 @@
         <h1 class="govuk-heading-xl">
           Select transactions to support your application
         </h1>
-         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
+        <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
         <p class="govuk-body">We do not need to know about smaller, everday purchases.</p>
         <h3>How to choose your transactions</h3>
@@ -803,7 +803,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/empstatus">Back</a>
+          <a class="govuk-c-back-link" href="/generic/bank-success">Back</a>
 
         </form>
       </div>
