--- a/app/views/generic/means-result.html
+++ b/app/views/generic/means-result.html
@@ -16,7 +16,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 15</b></p>
+    <p class="govuk-body"><b>Step 13 of 13</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -265,7 +265,7 @@
           </div>
           </br>
 
-          <a class="govuk-c-back-link" href="/generic/valuables">Back</a>
+          <a class="govuk-c-back-link" href="/generic/capitalshares">Back</a>
 
         </form>
       </div>
