--- a/app/views/generic/obconsent.html
+++ b/app/views/generic/obconsent.html
@@ -14,12 +14,12 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 2 of 15</b></p>
+    <p class="govuk-body"><b>Step 2 of 13</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="/generic/obbank" method="post">
+        <form class="form" action="/generic/dwpdetails" method="post">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
