Added a loop that allows a user to select multiple banks. Fixed step counter

--- a/app/views/civil/check-evidence.html
+++ b/app/views/civil/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 14</b></p>
+    <p class="govuk-body"><b>Step 8 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,9 +23,9 @@
           Check your answers
         </h1>
 
-        <p class="govuk-body">Please check and confirm the transactions you want to support your application.</p>
+        <p class="govuk-body">Please check the transactions you want to support your application.</p>
 
-        <form class="form" action="/civil/benefits-kind" method="post">
+        <form class="form" action="/civil/obmultiple" method="post">
 
           <div>
             <table class="govuk-c-table">
@@ -33,29 +33,29 @@
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="500">Type</th>
-                  <th class="govuk-c-table__header" scope="col">Amount</th>
+                  <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col">Amount</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Salary or wage</th>
-                  <td class="govuk-c-table__cell ">£1800.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1800.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Private pension</th>
-                  <td class="govuk-c-table__cell ">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Employer pension</th>
-                  <td class="govuk-c-table__cell ">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Board or rent received</th>
-                  <td class="govuk-c-table__cell ">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Child maintenance received</th>
-                  <td class="govuk-c-table__cell ">£250.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                 </tr>
               </tbody>
             </table>
@@ -67,21 +67,21 @@
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" scope="col" width="500">Type</th>
-                  <th class="govuk-c-table__header" scope="col">Amount</th>
+                  <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col">Amount</th>
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Housing costs</th>
-                  <td class="govuk-c-table__cell ">£1200.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Childcare costs</th>
-                  <td class="govuk-c-table__cell ">£600.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Child maintenance paid</th>
-                  <td class="govuk-c-table__cell ">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                 </tr>
               </tbody>
             </table>
