--- a/app/views/generic/check-evidence.html
+++ b/app/views/generic/check-evidence.html
@@ -25,7 +25,7 @@
 
         <p class="govuk-body">Please check the transactions you want to support your application.</p>
 
-        <form class="form" action="/generic/benefits-kind" method="post">
+        <form class="form" action="/generic/obmultiple" method="post">
 
           <div>
             <table class="govuk-c-table">
