--- a/app/views/crime/check-evidence.html
+++ b/app/views/crime/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 14</b></p>
+    <p class="govuk-body"><b>Step 8 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,9 +23,9 @@
           Check your answers
         </h1>
 
-        <p class="govuk-body">Please check and confirm the transactions you want to support your application.</p>
+        <p class="govuk-body">Please check the transactions you want to support your application.</p>
 
-        <form class="form" action="/crime/benefits-kind" method="post">
+        <form class="form" action="/crime/obmultiple" method="post">
 
           <div>
             <table class="govuk-c-table">
@@ -119,7 +119,7 @@
           </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/identify-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/generic/identify-evidence">Back</a>
 
         </form>
       </div>
