--- a/app/views/crime/identify-evidence.html
+++ b/app/views/crime/identify-evidence.html
@@ -82,7 +82,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 7 of 14</b></p>
+    <p class="govuk-body"><b>Step 7 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -93,14 +93,15 @@
         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
         <p class="govuk-body">We do not need to know about smaller, everday purchases.</p>
-        <h3>How to choose your transactions</h3>
 
-        <ol>
+        <p class="govuk-body"><b>How to choose your transactions</b></p>
+
+        <ul class="govuk-list govuk-list--bullet">
           <li>Check the box next to the item on your bank statement</li>
           <li>Select the type of transaction (e.g. salary or childcare)</li>
           <li>Select how often you receive or pay out money (e.g. weekly or monthly)</li>
           <li>Choose all relevant items and click 'Continue'</li>
-        </ol>
+        </ul>
 
         <form class="form" action="/crime/check-evidence" method="post">
 
