--- a/app/views/crime/obbank.html
+++ b/app/views/crime/obbank.html
@@ -173,14 +173,14 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 5 of 14</b></p>
+      <p class="govuk-body"><b>Step 5 of 15</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-                Log in to your online banking
-                </h1>
+          Log in to your online banking
+          </h1>
 
           <form class="form" id="bankForm" action="/crime/bank-success" method="get">
 
@@ -192,46 +192,26 @@
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="bank-1">
-                        Togetherbank
-                      </label>
+                  Togetherbank
+                </label>
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-2" name="bank" type="radio" value="myBank">
                   <label class="govuk-c-label govuk-c-radios__label" for="bank-2">
-                        myBank
-                      </label>
+                  myBank
+                </label>
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-3" name="bank" type="radio" value="HappyBank">
                   <label class="govuk-c-label govuk-c-radios__label" for="bank-3">
-                        HappyBank
-                      </label>
-                </div>
-              </fieldset>
-            </div>
-
-            <div class="govuk-c-radios">
-              <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
-                <legend class="govuk-c-fieldset__legend">
-                  <p class="govuk-heading">Do you have an account or ISA with a different bank or building society?</p>
-                </legend>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="other-bank-1" name="other-bank" type="radio" value="yes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="other-bank-1">
-                        Yes
-                      </label>
-                </div>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="other-bank-2" name="other-bank" type="radio" value="no">
-                  <label class="govuk-c-label govuk-c-radios__label" for="other-bank-2">
-                        No
-                      </label>
+                  HappyBank
+                </label>
                 </div>
               </fieldset>
             </div>
 
             <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/crime/obconsent">Back</a>
+            <a class="govuk-c-back-link" href="/crime/dwpconf">Back</a>
 
           </form>
         </div>
@@ -253,19 +233,19 @@
 
         <label for="uname"><b>Username</b></label>
         <input class="uname" type="text" placeholder="Enter Username" name="uname" style="width: 100%;
-                    padding: 12px 20px;
-                    margin: 8px 0;
-                    display: inline-block;
-                    border: 1px solid #ccc;
-                    box-sizing: border-box;" required>
+              padding: 12px 20px;
+              margin: 8px 0;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-sizing: border-box;" required>
 
         <label for="psw"><b>Password</b></label>
         <input class="pword" type="password" placeholder="Enter Password" name="psw" style="width: 100%;
-                    padding: 12px 20px;
-                    margin: 8px 0;
-                    display: inline-block;
-                    border: 1px solid #ccc;
-                    box-sizing: border-box;" required>
+              padding: 12px 20px;
+              margin: 8px 0;
+              display: inline-block;
+              border: 1px solid #ccc;
+              box-sizing: border-box;" required>
 
         <button id="login" type="button">Continue</button>
 
@@ -384,7 +364,7 @@
   </script>
 
   <!--Close the modal and submit form at end of bank process if no more banks
-          need to be checked-->
+    need to be checked-->
   <script>
     function modalCloseAndSubmit() {
 
