--- a/app/views/crime/obmultiple.html
+++ b/app/views/crime/obmultiple.html
@@ -4,42 +4,38 @@
 
   <div class="govuk-c-phase-banner">
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
-      alpha
-    </strong>
+        alpha
+      </strong>
       <span class="govuk-c-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
     </p>
   </div>
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 10 of 15</b></p>
+    <p class="govuk-body"><b>Step 9 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you get any benefits from work that are not money?
+          Do you have an account or ISA with a different bank or building society?
         </h1>
 
-        <p class="govuk-body">
-          Benefits in kind include a company car, luncheon vouchers or health insurance.
-        </p>
-
-        <form class="form" action="/civil/capital-assets" method="post">
+        <form class="form" action="/crime/multibank" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                <input class="govuk-c-radios__input" id="multi-bank-1" name="multibank" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="multi-bank-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                <input class="govuk-c-radios__input" id="multi-bank-2" name="multibank" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="multi-bank-2">
                 No
               </label>
               </div>
@@ -47,9 +43,10 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/civil/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
 
         </form>
+
       </div>
     </div>
   </main>
