--- a/app/views/generic/identify-evidence.html
+++ b/app/views/generic/identify-evidence.html
@@ -93,14 +93,14 @@
         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
         <p class="govuk-body">We do not need to know about smaller, everday purchases.</p>
-        <h3>How to choose your transactions</h3>
+        <p class="govuk-body"><b>How to choose your transactions</b></p>
 
-        <ol>
+        <ul class="govuk-list govuk-list--bullet">
           <li>Check the box next to the item on your bank statement</li>
           <li>Select the type of transaction (e.g. salary or childcare)</li>
           <li>Select how often you receive or pay out money (e.g. weekly or monthly)</li>
           <li>Choose all relevant items and click 'Continue'</li>
-        </ol>
+        </ul>
 
         <form class="form" action="/generic/check-evidence" method="post">
 
