--- a/app/views/crime/benefits-kind.html
+++ b/app/views/crime/benefits-kind.html
@@ -47,7 +47,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/crime/obmultiple">Back</a>
 
         </form>
       </div>
