--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -33,7 +33,7 @@
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
                 Yes
               </label>
               </div>
@@ -47,7 +47,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/generic/obmultiple">Back</a>
 
         </form>
       </div>
