--- a/app/views/civil/identify-evidence.html
+++ b/app/views/civil/identify-evidence.html
@@ -100,7 +100,7 @@
 
           <p class="govuk-body"><b>How to choose your transactions</b></p>
 
-          <<ul class="govuk-list govuk-list--bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <li>Check the box next to the item on your bank statement</li>
             <li>Select the type of transaction (e.g. salary or childcare)</li>
             <li>Select how often you receive or pay out money (e.g. weekly or monthly)</li>
