--- a/app/views/crime/obmultiple.html
+++ b/app/views/crime/obmultiple.html
@@ -43,7 +43,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/crime/check-evidence">Back</a>
 
         </form>
 
