--- a/app/views/generic/identify-outgoings.html
+++ b/app/views/generic/identify-outgoings.html
@@ -26,25 +26,34 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              We also need to understand your household and childcare outgoings
+              Tell us about your outgoings
         </h2>
-
+          <p style="govuk-body">
+              Add an item and tell us about relevant transactions from your bank statement. 
+          </p>
+          
         <details>
-          <summary><span class="summary">Help with types of outgoings</span></summary>
+          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>mortgage</li>
+                <li>rent, board or lodging</li>
+                <li>council tax</li>
+                <li>childcare costs to a registered care provider</li>
+                <li>maintenance payments</li>
+                <li>legal aid contributions</li>
+              </ul>
             </p>
-
           </div>
         </details>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Housing costs
+                    <span class="task-list-section-number">1. </span>Mortage, rent and council tax
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
@@ -56,7 +65,21 @@
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Childcare costs
+                    <span class="task-list-section-number">2. </span>Childcare
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add item
+                </a>
+              </li>
+            </ul>
+          </li>
+
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">3. </span>Other
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
@@ -67,7 +90,6 @@
             </ul>
           </li>
         </ol>
-
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
       </div>
