--- a/app/views/generic/select-housing.html
+++ b/app/views/generic/select-housing.html
@@ -26,20 +26,23 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select your outgoings
+              Select mortgage, rent and council tax payments
         </h2>
 
-        <p style="govuk-body">We've ordered your expenditure from largest to smallest</p>
+        <p style="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
         <details>
-          <summary><span class="summary">Help with types of outgoings</span></summary>
+          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>mortgage</li>
+                <li>rent, board or lodging</li>
+                <li>council tax</li>
+              </ul>
             </p>
-
           </div>
         </details>
 
