--- a/app/views/generic/select-salary.html
+++ b/app/views/generic/select-salary.html
@@ -26,22 +26,10 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select your income
+              Select your salary or wages
         </h2>
 
-        <p style="govuk-body">We've ordered your income from largest to smallest</p>
-
-        <details>
-          <summary><span class="summary">Help with types of income</span></summary>
-
-          <div class="panel panel-border-narrow">
-
-            <p style="govuk-body">
-              holding text
-            </p>
-
-          </div>
-        </details>
+        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
