--- a/app/views/generic/identify-income-with-salary.html
+++ b/app/views/generic/identify-income-with-salary.html
@@ -29,15 +29,28 @@
               Tell us about your income
         </h2>
 
+          <p style="govuk-body">
+              Add an item and tell us about relevant transactions from your bank statement. 
+          </p>
+          
         <details>
-          <summary><span class="summary">Help with types of income</span></summary>
+          <summary><span class="summary">What income should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>salary or wages from any jobs you have</li>
+                <li>private and state pension contributions</li>
+                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                <li>benefits in kind from your employer such as relocation payments</li>
+                <li>board from a family member, lodger or tenant</li>
+                <li>rent from another property</li>
+                <li>maintenance payments</li>
+                <li>student grant or loan</li>
+                <li>financial support from a friend or family member</li>
+              </ul>
             </p>
-
           </div>
         </details>
 
