--- a/app/views/generic/identify-income.html
+++ b/app/views/generic/identify-income.html
@@ -28,23 +28,36 @@
               Tell us about your income
         </h2>
 
+          <p style="govuk-body">
+              Add an item and tell us about relevant transactions from your bank statement. 
+          </p>
+          
         <details>
-          <summary><span class="summary">Help with types of income</span></summary>
+          <summary><span class="summary">What income should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>salary or wages from any jobs you have</li>
+                <li>private and state pension contributions</li>
+                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                <li>benefits in kind from your employer such as relocation payments</li>
+                <li>board from a family member, lodger or tenant</li>
+                <li>rent from another property</li>
+                <li>maintenance payments</li>
+                <li>student grant or loan</li>
+                <li>financial support from a friend or family member</li>
+              </ul>
             </p>
-
           </div>
         </details>
-
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
                     <span class="task-list-section-number">1. </span>Salary
             </h2>
+
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="/generic/select-salary">
@@ -81,6 +94,7 @@
 
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="govuk-c-back-link" href="">Back</a>
+
 
       </div>
 
