--- a/app/views/generic/identify-outgoings-housing-childcare.html
+++ b/app/views/generic/identify-outgoings-housing-childcare.html
@@ -26,18 +26,26 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              We also need to understand your household and childcare outgoings
+              Tell us about your outgoings
         </h2>
-
+          <p style="govuk-body">
+              Add an item and tell us about relevant transactions from your bank statement. 
+          </p>
         <details>
-          <summary><span class="summary">Help with types of outgoings</span></summary>
+          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>mortgage</li>
+                <li>rent, board or lodging</li>
+                <li>council tax</li>
+                <li>childcare costs to a registered care provider</li>
+                <li>maintenance payments</li>
+                <li>legal aid contributions</li>
+              </ul>
             </p>
-
           </div>
         </details>
 
@@ -71,6 +79,19 @@
                 </a>
                 <strong class="task-completed" id="childcare-1-completed">Verified</strong>
               </li>
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add item
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">3. </span>Other
+            </h2>
+            <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
                         Add item
