--- a/app/views/generic/select-other.html
+++ b/app/views/generic/select-other.html
@@ -26,20 +26,27 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select your income
+              Select any other types of income
         </h2>
 
-        <p style="govuk-body">We've ordered your income from largest to smallest</p>
+        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <details>
-          <summary><span class="summary">Help with types of income</span></summary>
+          <summary><span class="summary">What income should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              holding text
+            <p style="govuk-body">           
+              <ul>
+                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                <li>benefits in kind from your employer such as relocation payments</li>
+                <li>board from a family member, lodger or tenant</li>
+                <li>rent from another property</li>
+                <li>maintenance payments</li>
+                <li>student grant or loan</li>
+                <li>financial support from a friend or family member</li>
+              </ul>
             </p>
-
           </div>
         </details>
 
@@ -85,6 +92,8 @@
         <br>
 
         <a class="govuk-c-button govuk-c-button" href="/generic/identify-income-salary-other" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+
+ 
 
       </div>
 
