Minor copy change
Minor change to labelling on outgoing with housing

--- a/app/views/generic/identify-outgoings-housing-childcare.html
+++ b/app/views/generic/identify-outgoings-housing-childcare.html
@@ -52,7 +52,7 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Housing costs
+                    <span class="task-list-section-number">1. </span>Mortage, rent and council tax
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
@@ -70,7 +70,7 @@
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Childcare costs
+                    <span class="task-list-section-number">2. </span>Childcare
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
