fix bullet points, move other income question

--- a/app/views/generic/identify-income.html
+++ b/app/views/generic/identify-income.html
@@ -184,8 +184,6 @@
   dt,
   dd,
   ol,
-  ul,
-  li,
   fieldset,
   form,
   label,
@@ -219,6 +217,11 @@
     border: none;
     margin: 0;
     padding: 0;
+  }
+
+  ul,
+  li {
+    padding: 1;
   }
 
   h1,
@@ -1452,7 +1455,6 @@
     line-height: 38px;
   }
 
-  ul,
   ol {
     list-style-type: none;
   }
@@ -2607,7 +2609,7 @@
           <div class="panel panel-border-narrow">
 
             <p style="govuk-body">
-              <ul>
+              <ul style="govuk">
                 <li>salary or wages from any jobs you have</li>
                 <li>private and state pension contributions</li>
                 <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
