--- a/app/views/generic/identify-income-salary-other.html
+++ b/app/views/generic/identify-income-salary-other.html
@@ -185,8 +185,6 @@
   dt,
   dd,
   ol,
-  ul,
-  li,
   fieldset,
   form,
   label,
@@ -220,6 +218,11 @@
     border: none;
     margin: 0;
     padding: 0;
+  }
+
+  ul,
+  li {
+    padding: 1;
   }
 
   h1,
@@ -1453,7 +1456,6 @@
     line-height: 38px;
   }
 
-  ul,
   ol {
     list-style-type: none;
   }
@@ -2675,7 +2677,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-button govuk-c-button" href="/generic/other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
       </div>
 
