--- a/app/views/generic/identify-outgoings-housing-childcare.html
+++ b/app/views/generic/identify-outgoings-housing-childcare.html
@@ -185,8 +185,6 @@
   dt,
   dd,
   ol,
-  ul,
-  li,
   fieldset,
   form,
   label,
@@ -220,6 +218,11 @@
     border: none;
     margin: 0;
     padding: 0;
+  }
+
+  ul,
+  li {
+    padding: 1;
   }
 
   h1,
@@ -1453,7 +1456,6 @@
     line-height: 38px;
   }
 
-  ul,
   ol {
     list-style-type: none;
   }
