Improve navigation through new screens

--- a/app/views/generic/identify-outgoings-housing-childcare.html
+++ b/app/views/generic/identify-outgoings-housing-childcare.html
@@ -2591,7 +2591,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 17 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -2628,7 +2628,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                        Housing - £1200.00
+                        MyLandlord Letting Agents - £1200.00
                 </a>
                 <strong class="task-completed" id="housing-1-completed">Verified</strong>
               </li>
@@ -2646,7 +2646,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="childcare-1-completed">
-                        Childcare - £600.00
+                        Wiggly-tots Nursery - £600.00
                 </a>
                 <strong class="task-completed" id="childcare-1-completed">Verified</strong>
               </li>
@@ -2673,6 +2673,7 @@
         </ol>
 
         <a class="govuk-c-button govuk-c-button" href="/generic/check-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/select-childcare">Back</a>
 
       </div>
 
