--- a/app/views/generic/other-income.html
+++ b/app/views/generic/other-income.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 12 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -35,19 +35,20 @@
             <div class="govuk-c-radios__item">
               <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes" required>
               <label class="govuk-c-label govuk-c-radios__label" for="non-bank-money-1">
-                        Yes
-                      </label>
+                Yes
+              </label>
             </div>
             <div class="govuk-c-radios__item">
               <input class="govuk-c-radios__input" id="non-bank-money-2" name="non-bank-money" type="radio" value="no">
               <label class="govuk-c-label govuk-c-radios__label" for="non-bank-money-2">
-                        No
-                      </label>
+                 No
+              </label>
             </div>
           </fieldset>
         </div>
 
         <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/identify-income-salary-other">Back</a>
 
       </div>
 
