--- a/app/views/generic/identify-income-salary-other.html
+++ b/app/views/generic/identify-income-salary-other.html
@@ -2591,7 +2591,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 11 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -2678,6 +2678,7 @@
         </ol>
 
         <a class="govuk-c-button govuk-c-button" href="/generic/other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/select-other">Back</a>
 
       </div>
 
