--- a/app/views/generic/identify-income.html
+++ b/app/views/generic/identify-income.html
@@ -2590,13 +2590,13 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><strong>Step 7 of 24</strong></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Tell us about your income
+          Tell us about your income
         </h2>
 
         <p style="govuk-body">
@@ -2664,8 +2664,7 @@
         </ol>
 
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="">Back</a>
-
+        <a class="govuk-c-back-link" href="/generic/bank-success">Back</a>
 
       </div>
 
