--- a/app/views/generic/identify-outgoings.html
+++ b/app/views/generic/identify-outgoings.html
@@ -2592,7 +2592,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 13 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -2663,6 +2663,7 @@
           </li>
         </ol>
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/other-income">Back</a>
 
       </div>
 
