--- a/app/views/generic/select-childcare.html
+++ b/app/views/generic/select-childcare.html
@@ -4,6 +4,35 @@
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block content %}
 
+<style>
+  input[type='radio'] {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+    border-radius: 50%;
+    outline: none;
+    background: white;
+  }
+
+  input[type='radio']:hover {
+    box-shadow: 0 0 5px 0px orange inset;
+  }
+
+  input[type='radio']:before {
+    content: '';
+    display: block;
+    width: 60%;
+    height: 60%;
+    margin: 20% auto;
+    border-radius: 50%;
+  }
+
+  input[type='radio']:checked:before {
+    background: black;
+  }
+</style>
+
 <div class="govuk-o-width-container">
 
   <div class="govuk-c-phase-banner">
@@ -18,7 +47,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 16 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -84,6 +113,7 @@
         <br>
 
         <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings-housing-childcare" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/identify-outgoings-with-housing">Back</a>
 
       </div>
 
