--- a/app/views/generic/select-housing.html
+++ b/app/views/generic/select-housing.html
@@ -4,6 +4,35 @@
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block content %}
 
+<style>
+  input[type='radio'] {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+    border-radius: 50%;
+    outline: none;
+    background: white;
+  }
+
+  input[type='radio']:hover {
+    box-shadow: 0 0 5px 0px orange inset;
+  }
+
+  input[type='radio']:before {
+    content: '';
+    display: block;
+    width: 60%;
+    height: 60%;
+    margin: 20% auto;
+    border-radius: 50%;
+  }
+
+  input[type='radio']:checked:before {
+    background: black;
+  }
+</style>
+
 <div class="govuk-o-width-container">
 
   <div class="govuk-c-phase-banner">
@@ -18,7 +47,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step n of n</b></p>
+    <p class="govuk-body"><b>Step 14 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -51,51 +80,57 @@
               <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Description</th>
               <th class="govuk-c-table__header" scope="col" width="150" style="border-width:thick;">Date</th>
               <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Amount</th>
+              <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
             </tr>
           </thead>
           <tbody class="govuk-c-table__body">
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary">&nbsp;&nbsp;&nbsp;MyLandlord Letting agents</label>
-                </div>
-              </td>
-              <td class="govuk-c-table__cell">18 Jan 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-            </tr>
-            <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary">&nbsp;&nbsp;&nbsp;Wiggly-tots Nursery</label>
-                </div>
-              </td>
+              <td class="govuk-c-table__cell">MyLandlord Letting Agents</td>
               <td class="govuk-c-table__cell">06 Jan 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
-            </tr>
-            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary">&nbsp;&nbsp;&nbsp;KFC</label>
+                  <label><input type="radio" id='regular' name="outgoings"></label>
                 </div>
               </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Wiggly-tots Nursery</td>
               <td class="govuk-c-table__cell">24 Jan 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£27.00</td>
-            </tr>
-            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary">&nbsp;&nbsp;&nbsp;Netflix</label>
+                  <label><input type="radio" id='regular' name="outgoings"></label>
                 </div>
               </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">KFC</td>
+              <td class="govuk-c-table__cell">18 Jan 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£27.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="outgoings"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Netflix</td>
               <td class="govuk-c-table__cell">18 Jan 2018</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£15.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="outgoings"></label>
+                </div>
+              </td>
             </tr>
           </tbody>
         </table>
+
         <br>
 
-
         <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings-with-housing" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/identify-outgoings">Back</a>
 
       </div>
 
